# qr-rs

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  codecov.yml  index.html  mkdocs.yml
.github/workflows/: ci-lib.yml  ci-server.yml  ci.yml  coverage.yml  docs.yml  msrv.yml  publish.yml  release-cli.yml  release-common.yml  release-lib.yml  release-server.yml
benches/: my_benchmark.rs
cli/: CHANGELOG.md  Cargo.toml  README.md  index.html
cli/src/: error.rs  main.rs
common/: CHANGELOG.md  Cargo.toml  README.md
common/src/: lib.rs  logos.rs
docs/: index.md
docs/cli/: index.md
docs/server/: index.md
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/.cargo/: config.toml
lib/benches/: my_benchmark.rs
lib/src/: error.rs  lib.rs
lib/tests/: lib.rs
search/: search_index.json
server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  index.html
server/src/: endpoints.rs  error.rs  logos.rs  main.rs
src/: endpoints.rs  error.rs  lib.rs  logos.rs  main.rs
stylesheets/: extra.css
