[package]
name = "qr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.150", features = ["derive"] }
qr-rs-lib = { path = "./lib" }

[workspace]
members = [ "lib" ]

[dev-dependencies]
pretty_assertions = "1.3.0"
