[package]
name = "qrg"
version = "0.1.0"
edition = "2021"
description = "Generates QRCodes with a logo overlay."
keywords = ["qr-code", "qrcode"]
repository = "https://github.com/AntoniosBarotsis/qr-rs"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
qr-rs-lib = { path = "../lib" }
common = { path = "../common" }
tokio = { version = "1.24.1", features = ["rt", "macros"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
