[package]
name = "qrg"
version = "0.1.0-rc1"
edition = "2021"
description = "Generates QRCodes with a logo overlay."
keywords = ["qr-code", "qrcode"]
repository = "https://github.com/AntoniosBarotsis/qr-rs"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
clap = { version = "4.1.1", features = ["derive"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }

qr-rs-common = { version = "0.1.0-rc1", path = "../common" }
qr-rs-lib = { version = "0.1.0-rc1", path = "../lib" }

[dev-dependencies]
pretty_assertions = "1.3.0"
