[package]
name = "common"
version = "0.1.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
reqwest = { version = "0.11", features = ["blocking"] }

qr-rs-lib = { version = "0.1.0-rc1", path = "../lib" }
