[package]
name = "qr-rs-lib"
version = "0.1.0"
edition = "2021"
description = "Generates QRCodes with a logo overlay."
keywords = ["qr-code", "qrcode"]
repository = "https://github.com/AntoniosBarotsis/qr-rs"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_qr = { version = "0.8.4", features = ["image"] }
image = "0.24.5"
png = "0.17.6"
thiserror = "1.0.38"

[dev-dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ]}
rand = "0.8.5"
pretty_assertions = "1.3.0"

[[bench]]
name = "my_benchmark"
harness = false
