[package]
name = "qr-rs"
version = "0.1.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
thiserror = "1.0.38"
serde = { version = "1.0.150", features = ["derive"] }

common = { version = "0.1.0-rc1", path = "../common" }
qr-rs-lib = { version = "0.1.0-rc1", path = "../lib" }

[dev-dependencies]
pretty_assertions = "1.3.0"
